# aws-firehose-handler

./: README.md  pyproject.toml
src/firehose_handler/: __init__.py  handler.py
tests/: test_handler.py  test_version.py
